Flesh out the dog model a bit
